remove jumping glitch fix because it caused text+cube overlap in Firefox. Forcing width is not good because of varying text widths

--- a/assets/widgetCss.css
+++ b/assets/widgetCss.css
@@ -47,12 +47,6 @@
     text-decoration: none;
 }
 
-/* set width to prevent jumping glitch between initial and typing states */
-#remotestorage-widget.remotestorage-state-initial .bubble,
-#remotestorage-widget.remotestorage-state-typing .bubble {
-    width: 185px;
-}
-
 #remotestorage-widget .bubble-text {
     padding-right: 32px;
 }
